# meminfo

./: meminfo.c  meson.build
